# argus_ticket_rt

./: .git-blame-ignore-revs  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-django32.txt  requirements-django40.txt  requirements-django41.txt  requirements-django42.txt  requirements-django50.txt  requirements-django51.txt  requirements-django52.txt  runtests.py  tox.ini
requirements/: base.txt
src/: argus_ticket_rt.py
tests/: test_rt.py  test_settings.py
