[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "argus_ticket_rt"
authors = [{name = "Johanna England", email = "johanna.england@sikt.no"}]
maintainers = [{name = "Johanna England", email = "johanna.england@sikt.no"}]
readme = "README.md"
dependencies = [
    "argus-server>=1.34.0",
    "rt>=3.3.6",
]
requires-python = ">=3.10"
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
]
dynamic = ["version", "description"]

[project.optional-dependencies]
test = [
    "tox",
    "coverage",
]

[project.urls]
Home = "https://github.com/Uninett/argus_ticket_rt"
Issues = "https://github.com/Uninett/argus_ticket_rt/issues"
